<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">- Evolve Launcher -</string>
    <string name="default_apps_group">Apps</string>
    <string name="default_media_group" translatable="false">Media</string>
    <string name="default_games_group" translatable="false">Games</string>
    <string name="add_group">Add group</string>
    <string name="delete_group">Delete group</string>
    <string name="edit_group">Edit group</string>
    <string name="app_details">App details &amp; Uninstall</string>
    <string name="app_uninstall">Uninstall App/Game</string>
    <string name="apps_hidden">Hidden</string>

    <string name="settings_apps_enable">Enable editing</string>
    <string name="settings_apps_disable">Disable editing</string>
    <string name="settings_device">Device settings</string>
    <string name="settings_look">Launcher settings</string>
    <string name="settings_platforms">Platforms</string>
    <string name="settings_webview" >Coming Soon/Pre-Orders</string>
    <string name="settings_tweaks">System tweaks</string>
    <string name="settings_ftp">FTP Client Placeholder</string>
    <string name="settings_sideload">Sideload Placeholder</string>

    <string name="background_opacity">Background opacity</string>
    <string name="icons_size">Icons size</string>
    <string name="show_app_names">Show app names</string>
    <string name="start_shortcut">Open the launcher with Explore icon from the system dashboard.</string>

    <string name="service_app_shortcut">App shortcut</string>
    <string name="service_explore_app">Explore app</string>
    <string name="service_os_updater">OS updater</string>

    <string name="accessibility_label">Replace Explore app</string>
    <string name="accessibility_button">Open settings</string>
    <string name="accessibility_tooltip" >Enable Evolve Launcher in accessibility menu</string>
    <string name="icons_style">Icons style</string>
    <string name="update_header">New version available</string>
    <string name="autorun">Launch Evolve Launcher at system startup</string>
    <string name="failed_to_launch">Failed to launch</string>
    <string name="default_tools_group">Tools</string>
    <string name="service_backup_settings">Backup settings</string>
    <string name="service_restore_settings">Restore settings</string>
	
	<string name="selection_hint_single">Click a group to move the selected app.</string>
    <string name="selection_hint_multiple">%d apps selected. Click a group to move the selected app.</string>
    <string-array name="sort_options">
    
        <item>↓ Name</item>
        <item>↑ Name</item>
        <item>↓ Recent</item>
        <item>↑ Recent</item>
        <item>↓ Install date</item>
        <item>↑ Install date</item>
    </string-array>
</resources>